--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,20 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 label {
   display: block;
+}
+.app {
+  padding: 15px;
+}
+.theme-dark {
+  background: #333;
+  color: #fff;
+}
+.todo-app {
+  padding: 50px;
+}
+.todo-app ul li .completed {
+  text-decoration: line-through;
 }
